# nixum_live_install

./: .ninja_deps  .ninja_log  CMakeLists.txt  compile_commands.json  default.nix  error.txt  main.cpp  shell.nix
.cache/clangd/index/: main.cpp.A2DEEFAF0CA9C927.idx
